# okx

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  backtest.py  bot.py  config.py  main.py  market_data.py  models.py  okx_client.py  presets.py  risk.py  storage.py  strategy.py
static/: app.js  index.html  styles.css
tests/: test_api.py  test_backtest.py  test_okx_client.py  test_risk.py  test_strategy.py
