[project]
name = "okx-quant-console"
version = "0.1.0"
description = "Local OKX demo perpetual swap quant trading console"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.26",
  "pydantic-settings>=2.2",
  "aiosqlite>=0.19",
  "python-dotenv>=1.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["static*", "tests*", "data*"]
